# tensor-inference

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
docs/: sample_v1.md
include/tensor/adapter/: adapter_loader.hpp  adapter_weights.hpp
include/tensor/backend/: device.hpp  ops.hpp  tensor.hpp
include/tensor/core/: dtype.hpp  shape.hpp  tensor_view.hpp
include/tensor/inference/: generator.hpp
include/tensor/inference/sampling/: greedy.hpp  top_p.hpp
include/tensor/models/: concepts.hpp  kv_cache.hpp
include/tensor/models/gemma/: gemma_model.hpp
include/tensor/models/llama/: llama_config.hpp  llama_model.hpp
include/tensor/models/mistral/: mistral_model.hpp
include/tensor/models/qwen/: qwen_adapter_model.hpp  qwen_model.hpp
include/tensor/parser/: config.hpp  errors.hpp  safetensors.hpp  weight_map.hpp
include/tensor/resolver/: resolver.hpp
include/tensor/tokenizer/: tokenizer.hpp
include/transformers/backend/: device.hpp  ops.hpp  tensor.hpp
include/transformers/core/: dtype.hpp  shape.hpp  tensor_view.hpp
include/transformers/inference/: generator.hpp
include/transformers/inference/sampling/: greedy.hpp  top_p.hpp
include/transformers/models/: concepts.hpp  kv_cache.hpp
include/transformers/models/gemma/: gemma_model.hpp
include/transformers/models/llama/: llama_config.hpp  llama_model.hpp
include/transformers/models/mistral/: mistral_model.hpp
include/transformers/models/qwen/: qwen_model.hpp
include/transformers/parser/: config.hpp  errors.hpp  safetensors.hpp  weight_map.hpp
include/transformers/resolver/: resolver.hpp
include/transformers/tokenizer/: tokenizer.hpp
src/adapter/: adapter_loader.cpp
src/backend/cuda/: device.cu  ops.cu  tensor.cu
src/inference/: generator.cpp
src/inference/sampling/: greedy.cpp  top_p.cpp
src/models/: kv_cache.cpp
src/models/gemma/: gemma_model.cpp
src/models/llama/: llama_config.cpp  llama_model.cpp
src/models/mistral/: mistral_model.cpp
src/models/qwen/: qwen_adapter_model.cpp  qwen_model.cpp
src/parser/: config.cpp  safetensors.cpp  weight_map.cpp
src/parser/detail/: mmap.hpp
src/resolver/: resolver.cpp
src/tokenizer/: tokenizer.cpp
tests/: parser_safetensors.cpp
tools/: model-cli.cpp  run_gemma.cpp  run_llama.cpp  run_mistral.cpp  run_qwen.cpp  run_qwen_adapter.cpp
